STYLE: Changed z-index to fix item background

--- a/src/sass/components/_background.scss
+++ b/src/sass/components/_background.scss
@@ -11,5 +11,5 @@ body::before {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -1;
+    z-index: -2;
 }
